build/log/idf_py_stdout_output_613627
Command: ninja all
[1/135] Linking C static library esp-idf/unity/libunity.a
[2/135] Linking C static library esp-idf/esp_driver_isp/libesp_driver_isp.a
[3/135] Building C object esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj
FAILED: [code=1] esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj 
/home/goringich/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20251107/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/goringich/hello_p4/build/config -I/home/goringich/hello_p4/components/i2c_bus/include -I/home/goringich/esp-idf/components/newlib/platform_include -I/home/goringich/esp-idf/components/freertos/config/include -I/home/goringich/esp-idf/components/freertos/config/include/freertos -I/home/goringich/esp-idf/components/freertos/config/riscv/include -I/home/goringich/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/goringich/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/goringich/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/goringich/esp-idf/components/freertos/esp_additions/include -I/home/goringich/esp-idf/components/esp_hw_support/include -I/home/goringich/esp-idf/components/esp_hw_support/include/soc -I/home/goringich/esp-idf/components/esp_hw_support/include/soc/esp32p4 -I/home/goringich/esp-idf/components/esp_hw_support/dma/include -I/home/goringich/esp-idf/components/esp_hw_support/ldo/include -I/home/goringich/esp-idf/components/esp_hw_support/debug_probe/include -I/home/goringich/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/goringich/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/goringich/esp-idf/components/esp_hw_support/power_supply/include -I/home/goringich/esp-idf/components/esp_hw_support/port/esp32p4/. -I/home/goringich/esp-idf/components/esp_hw_support/port/esp32p4/include -I/home/goringich/esp-idf/components/esp_hw_support/port/esp32p4/private_include -I/home/goringich/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32p4/. -I/home/goringich/esp-idf/components/heap/include -I/home/goringich/esp-idf/components/heap/tlsf -I/home/goringich/esp-idf/components/log/include -I/home/goringich/esp-idf/components/soc/include -I/home/goringich/esp-idf/components/soc/esp32p4 -I/home/goringich/esp-idf/components/soc/esp32p4/include -I/home/goringich/esp-idf/components/soc/esp32p4/register/hw_ver1 -I/home/goringich/esp-idf/components/hal/platform_port/include -I/home/goringich/esp-idf/components/hal/esp32p4/include -I/home/goringich/esp-idf/components/hal/include -I/home/goringich/esp-idf/components/esp_rom/include -I/home/goringich/esp-idf/components/esp_rom/esp32p4/include -I/home/goringich/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -I/home/goringich/esp-idf/components/esp_rom/esp32p4 -I/home/goringich/esp-idf/components/esp_common/include -I/home/goringich/esp-idf/components/esp_system/include -I/home/goringich/esp-idf/components/esp_system/port/soc -I/home/goringich/esp-idf/components/esp_system/port/include/riscv -I/home/goringich/esp-idf/components/esp_system/port/include/private -I/home/goringich/esp-idf/components/riscv/include -I/home/goringich/esp-idf/components/lwip/include -I/home/goringich/esp-idf/components/lwip/include/apps -I/home/goringich/esp-idf/components/lwip/include/apps/sntp -I/home/goringich/esp-idf/components/lwip/lwip/src/include -I/home/goringich/esp-idf/components/lwip/port/include -I/home/goringich/esp-idf/components/lwip/port/freertos/include -I/home/goringich/esp-idf/components/lwip/port/esp32xx/include -I/home/goringich/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/goringich/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/goringich/esp-idf/components/driver/deprecated -I/home/goringich/esp-idf/components/driver/i2c/include -I/home/goringich/esp-idf/components/driver/touch_sensor/include -I/home/goringich/esp-idf/components/driver/twai/include -I/home/goringich/esp-idf/components/esp_pm/include -I/home/goringich/esp-idf/components/esp_ringbuf/include -I/home/goringich/esp-idf/components/esp_driver_gpio/include -I/home/goringich/esp-idf/components/esp_driver_pcnt/include -I/home/goringich/esp-idf/components/esp_driver_gptimer/include -I/home/goringich/esp-idf/components/esp_driver_spi/include -I/home/goringich/esp-idf/components/esp_driver_mcpwm/include -I/home/goringich/esp-idf/components/esp_driver_ana_cmpr/include -I/home/goringich/esp-idf/components/esp_driver_i2s/include -I/home/goringich/esp-idf/components/esp_driver_sdmmc/include -I/home/goringich/esp-idf/components/sdmmc/include -I/home/goringich/esp-idf/components/esp_driver_sdspi/include -I/home/goringich/esp-idf/components/esp_driver_sdio/include -I/home/goringich/esp-idf/components/esp_driver_dac/include -I/home/goringich/esp-idf/components/esp_driver_rmt/include -I/home/goringich/esp-idf/components/esp_driver_tsens/include -I/home/goringich/esp-idf/components/esp_driver_sdm/include -I/home/goringich/esp-idf/components/esp_driver_i2c/include -I/home/goringich/esp-idf/components/esp_driver_uart/include -I/home/goringich/esp-idf/components/vfs/include -I/home/goringich/esp-idf/components/esp_driver_ledc/include -I/home/goringich/esp-idf/components/esp_driver_parlio/include -I/home/goringich/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/goringich/esp-idf/components/esp_driver_twai/include -march=rv32imafc_zicsr_zifencei_xesploop_xespv -mabi=ilp32f  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/goringich/hello_p4=. -fmacro-prefix-map=/home/goringich/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -march=rv32imafc_zicsr_zifencei_xesppie -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj -MF esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj.d -o esp-idf/i2c_bus/CMakeFiles/__idf_i2c_bus.dir/src/i2c_bus.c.obj -c /home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c
/home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c:47:11: error: conflicting types for 'i2c_bus_scan'; have 'esp_err_t(void)' {aka 'int(void)'}
   47 | esp_err_t i2c_bus_scan(void) {
      |           ^~~~~~~~~~~~
In file included from /home/goringich/hello_p4/components/i2c_bus/src/i2c_bus.c:1:
/home/goringich/hello_p4/components/i2c_bus/include/i2c_bus.h:15:11: note: previous declaration of 'i2c_bus_scan' with type 'esp_err_t(uint8_t *, int,  int *)' {aka 'int(unsigned char *, int,  int *)'}
   15 | esp_err_t i2c_bus_scan(uint8_t *found_addrs, int max_addrs, int *found_cnt);
      |           ^~~~~~~~~~~~
[4/135] Building C object esp-idf/esp_driver_cam/CMakeFiles/__idf_esp_driver_cam.dir/dvp_share_ctrl.c.obj
[5/135] Building C object esp-idf/cmock/CMakeFiles/__idf_cmock.dir/CMock/src/cmock.c.obj
[6/135] Building C object esp-idf/esp_driver_cam/CMakeFiles/__idf_esp_driver_cam.dir/esp_cam_ctlr.c.obj
[7/135] Building C object esp-idf/app_trace/CMakeFiles/__idf_app_trace.dir/port/port_uart.c.obj
[8/135] Building C object esp-idf/esp_driver_cam/CMakeFiles/__idf_esp_driver_cam.dir/dvp/src/esp_cam_ctlr_dvp_gdma.c.obj
[9/135] Building C object esp-idf/esp_driver_jpeg/CMakeFiles/__idf_esp_driver_jpeg.dir/jpeg_common.c.obj
[10/135] Building C object esp-idf/esp_driver_cam/CMakeFiles/__idf_esp_driver_cam.dir/csi/src/esp_cam_ctlr_csi.c.obj
[11/135] Building C object esp-idf/esp_driver_cam/CMakeFiles/__idf_esp_driver_cam.dir/isp_dvp/src/esp_cam_ctlr_isp_dvp.c.obj
[12/135] Building C object esp-idf/esp_driver_cam/CMakeFiles/__idf_esp_driver_cam.dir/dvp/src/esp_cam_ctlr_dvp_cam.c.obj
ninja: build stopped: subcommand failed.
